		the many changes in the Miranda core, it became incompatible, mainly
		because of the new UTF-8 based message storage format.

		NOTE: This plugin needs Miranda IM 0.7 or later and will not work in
			  older versions as it does not support the old plugin interface
			  any longer.
			  		
---------------------------------------------------------------------

Legend for the changelist:

-  -> removed item/feature
+  -> added feature
!  -> bugfix
*  -> changed feature


2.0.0.0	- 2008/01/11

*	Initial release, based on Jonathan Gordons old History Editor.
	
	The following things were changed:
	----------------------------------
	
+	UNICODE aware. There are two builds, one ANSI, one UNICODE. Use
	the proper build (unless, you run Miranda on Win 9x, you most
	likely want to use the Unicode build).
	
-	removed main menu item

-	removed the contact list in the history editor window. You can
	now use it from the contacts context menu, choosing "View History
	with History Editor" entry. Multiple edit windows can be open,
	however only one per contact (obviously). The change was made to
	standardize its UI with similar plugins (i.e. Database Editor++).

*	display contacts name in the editor title bar.

*	implemented a paging approach for large histories. If the history
	of a contact has more than 1000 entries, only 1000 will be loaded
	and you will be able to use the paging controls at the bottom of
	the window to load the next/previous 1000 entries. This makes 
	things fast for large histories and reduces memory footprint.
	
*	fixed sorting of the history list. It's now properly sorted by
	timestamp.		

!	fixed message text corruption for all events stored in UTF-8
	format. This message format is now supported.
	
*	Save size and position of the history editor window when you close
	it. It also saves the column widths you have setup in the list
	of history items.

*	Size and position of the edit window is also remembered between 
	sessions.
	