@@ -195,19 +195,10 @@
 #define WM_NOTIFY                       0x004E
 #define IDD_MAIN                        102
 #define IDI_COMP                        103
-#define IDI_OFFLINE                     104
-#define IDI_ONLINE                      105
-#define IDI_NOTICK                      106
-#define IDI_URL                         107
-#define IDI_FILE                        108
-#define IDI_HISTORY                     109
-#define IDI_MSG                         110
-#define IDI_TICK                        111
 #define IDR_MAINMENU                    112
 #define IDR_CONTEXTMENU                 113
 #define IDD_HISTORYEDIT                 114
 #define IDI_AUTH                        115
-#define IDI_ADD                         116
 #define WM_CONTEXTMENU                  0x007B
 #define SES_NOIME                       128
 #define IMF_DUALFONT                    0x0080
