@@ -83,17 +83,7 @@ END
 
 // Icon with lowest ID value placed first to ensure application icon
 // remains consistent on all systems.
-IDI_COMP                ICON                    "res\\Icon_4.ico"
-IDI_OFFLINE             ICON                    "res\\offline2.ico"
-IDI_ONLINE              ICON                    "res\\online2.ico"
-IDI_NOTICK              ICON                    "res\\notick.ico"
-IDI_URL                 ICON                    "res\\url.ico"
-IDI_FILE                ICON                    "res\\file.ico"
-IDI_HISTORY             ICON                    "res\\history.ico"
-IDI_MSG                 ICON                    "res\\message.ico"
-IDI_TICK                ICON                    "res\\tick.ico"
 IDI_AUTH                ICON                    "res\\freechat.ico"
-IDI_ADD                 ICON                    "res\\addcontact.ico"
 
 /////////////////////////////////////////////////////////////////////////////
 //
